fix: light mode default and x icon mobile nav bar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,12 @@
 @import "tailwindcss";
 
 :root {
-  --font-family-sans: var(--font-manrope), "Manrope Placeholder", system-ui,
-    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-  --background: #ffffff;
-  --foreground: #171717;
+  --font-family-sans:
+    var(--font-manrope), "Manrope Placeholder", system-ui, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+  /* Use dark mode as default even for light mode */
+  --background: #141414;
+  --foreground: #ededed;
 }
 
 @theme inline {
